CHANGES IN FLTK 1.1.0rc2

	- Wide arcs would draw with "teeth".
	- The preferences demo included Fl/Fl_Preferences.H
	  instead of FL/Fl_Preferences.H.


CHANGES IN FLTK 1.1.0rc1

	- The fl_file_chooser() and fl_dir_chooser() functions
	  now support an optional "relative" argument to get
	  relative pathnames; the default is to return absolute
	  pathnames.
	- The backspace and delete keys now work as expected in
	  the file chooser when doing filename completion.
	- FLUID now supports running shell commands.
	- New Fl_File_Input widget that shows directory
	  separators with filename in input field.
	- The Fl_File_Chooser dialog now shows the absolute path
	  in the filename field using the Fl_File_Input widget.
	- FLUID now keeps track of grid, tooltip, and other
	  GUI options, along with the last 10 files opened.
	- Tooltip windows would show up in the task bar under
	  WIN32.
	- Now append trailing slash to directory names in names
	  in WIN32 version of scandir().  This takes care of a
	  file chooser performance problem with large
	  directories.
	- Added Fl_Preferences class from Matthias Melcher,
	  including binary data support.
	- FLUID now recognizes the "using" keyword in
	  declarations.
	- fl_file_chooser() didn't highlight the requested file
	  the second time the file chooser dialog was shown.
	- Fixed rendering of Fl_Light_Button with the plastic
	  scheme.
	- Fixed a bug in the MacOS font enumeration code.
	- Now show a "locked" icon next to static/private
	  elements in FLUID, and "unlocked" icon next to
	  global/public elements.
	- Implemented Fl_Menu_Item image labels using older
	  1.0.x labeltype method.
	- Updated the PNG library check to support both png.h
	  and libpng/png.h.
	- Fixed a recursion bug in tooltips that was causing
	  random crashes.
	- fl_file_chooser() could cause a segfault when passed a
	  NULL filename parameter in some situations.
	- Added a "-g" option to fltk-config to support quick