@@ -3,6 +3,9 @@ CHANGES IN FLTK 1.1.0rc2
 	- Wide arcs would draw with "teeth".
 	- The preferences demo included Fl/Fl_Preferences.H
 	  instead of FL/Fl_Preferences.H.
+	- Fl_File_Chooser.cxx defined the file chooser functions
+	  again; they should only be defined in the header file.
+	- FLUID was opening the display when it shouldn't have.
 
 
 CHANGES IN FLTK 1.1.0rc1
